tests/negative/parser/err_unclosed_brace.ual
-- Parser error test: unclosed brace
@stack = stack.new(i64)
@stack {
    push(1)
-- missing closing brace
